# modelcardgen

./: .gitignore  EXAMPLE_MODEL_CARD.md  EXAMPLE_RISK_REPORT.md  MANIFEST.in  README.md  demo_notebook.ipynb  example_generate.py  example_risk_report.py  pyproject.toml
.github/workflows/: test-and-publish.yml
examples/: README.md  generate_sample_data.py  input_full.yaml  input_full_flat.yaml  input_minimal.json  input_minimal_flat.json
src/modelcardgen/cli/: main.py
src/modelcardgen/core/: interpreter.py  metrics.py  models.py  security.py  trainer.py
src/modelcardgen/reports/: markdown.py  risk.py
src/modelcardgen/templates/: model_card.md.j2  risk_report.md.j2
tests/: test_cli.py  test_generator.py  test_interpreter.py  test_markdown_generator.py  test_metrics.py  test_risk_generator.py
